@@ -636,6 +636,12 @@ $wgMessageStructure = array(
 		'revisiondelete',
 		'revdelete-nooldid-title',
 		'revdelete-nooldid-text',
+		'revdelete-nologtype-title',
+		'revdelete-nologtype-text',
+		'revdelete-toomanytargets-title',
+		'revdelete-toomanytargets-text',
+		'revdelete-nologid-title',
+		'revdelete-nologid-text',
 		'revdelete-selected',
 		'logdelete-selected',
 		'revdelete-text',
